--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "i18next": "^25.5.3",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
+    "luxon": "^3.7.2",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-datepicker": "^8.4.0",
@@ -76,6 +77,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/luxon": "^3.7.1",
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
